<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonAgenda"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/button_agenda"
        android:onClick="agendaView" />

    <Button
        android:id="@+id/buttonTimetable"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
     	android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonAgenda"
        android:layout_marginTop="24dp"
        android:text="@string/button_timetable"
        android:onClick="timetableView" />

    <Button
        android:id="@+id/buttonGrades"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonTimetable"
        android:layout_marginTop="24dp"
        android:text="@string/button_grades" 
        android:onClick="gradesView" />
    
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonGrades"
        android:layout_marginTop="60dp"
        android:text="@string/button_logout"
        android:onClick="signOut" />

</RelativeLayout>