<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/netLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:ems="10"
        tools:ignore="TextFields"
        android:singleLine="true" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/netLinkText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:ems="10" 
        android:inputType="textPassword"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/button_sign_in"
        android:onClick="signin" />

    <TextView
        android:id="@+id/netLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/netLinkText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/netlink"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordText"
        android:layout_alignLeft="@+id/netLinkTextView"
        android:layout_marginBottom="40dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userHelpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/userhelp"
        android:textSize="14sp"
        android:clickable="true"
        android:onClick="userHelp" />

    <ImageView
        android:id="@+id/netlinkHelpimageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/netLinkTextView"
        android:layout_alignRight="@+id/userHelpTextView"
        android:layout_alignTop="@+id/netLinkTextView"
        android:layout_toRightOf="@+id/netLinkTextView"
        android:clickable="true"
        android:onClick="whatsThis" 
        android:src="@drawable/vista_help_and_support_icon" 
        android:contentDescription="@string/netlink"/>

</RelativeLayout>